--- a/css/styles-all.css
+++ b/css/styles-all.css
@@ -8,3 +8,8 @@
   фон футера #2F303A
 
 } */
+
+/* ps чтото сломалось в пути фото в 
+портфолио не отображаеться на гите(( я это 
+поправлю, если есть другие ошибки 
+гляньте пжлст */
