--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,13 @@ body {
   list-style: none;
 }
 
+address {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+}
+
 .link {
   text-decoration: none;
   color: #212121;
@@ -25,22 +32,27 @@ body {
 /* Навигация */
 
 .logo {
+  font-family: Raleway;
   color: #2196f3;
   font-weight: bold;
   font-size: 26px;
 }
 
 .logo-studio {
+  font-family: Raleway;
   color: #212121;
   font-weight: bold;
   font-size: 26px;
 }
 
 .nav-item {
+  font-weight: 500;
+  font-size: 14px;
   color: #212121;
 }
 
 .nav-adress-ithem {
+  font-weight: 500;
   color: #757575;
   font-size: 14px;
   line-height: 24px;
@@ -54,6 +66,14 @@ body {
   font-size: 44px;
   line-height: 60px;
   color: #ffffff;
+  text-transform: uppercase;
+}
+
+.button:hover,
+.button:focus {
+  background: #188ce8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
 }
 
 .button {
@@ -75,8 +95,8 @@ body {
   border-radius: 4px;
   cursor: pointer;
   color: #ffffff;
-  width: 200px;
-  height: 50px;
+  padding: 6px 22px;
+  border: none;
 }
 .button-ithem {
   font-family: Roboto;
@@ -86,8 +106,8 @@ body {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   cursor: pointer;
-  width: 200px;
-  height: 50px;
+  padding: 6px 22px;
+  border: none;
 }
 
 /* Особенности */
@@ -105,7 +125,8 @@ body {
 .head-list {
   color: #212121;
   font-weight: bold;
-  line-height: 16px;
+  line-height: 14px;
+  text-transform: uppercase;
 }
 /* Чем мы занимаемся */
 
@@ -115,6 +136,7 @@ body {
   font-weight: 500;
   font-size: 16px;
   line-height: 19px;
+  text-transform: none;
 }
 
 /* Подвал */
@@ -126,9 +148,17 @@ body {
 }
 
 .logo-studio-footer {
+  font-family: Raleway;
   color: #ffffff;
   font-weight: bold;
   font-size: 26px;
+}
+
+.address-text > address {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
 }
 
 /* За дивы сильно не ругайте
