--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,9 @@
+:root {
+  --prymary-text-color: #212121;
+  --title-text-color: #2196f3;
+  --ithem-text-color: #757575;
+}
+
 body {
   font-family: Roboto, sans-serif;
   background-color: #ffffff;
