--- a/css/styles.css
+++ b/css/styles.css
@@ -5,15 +5,59 @@
   --button-color: #2196f3;
   --hero-color: #ffffff;
   --letter-spacing: 0.03em;
+  --background-color: #2f303a;
 }
 
 body {
   font-family: Roboto, sans-serif;
-  background-color: #ffffff;
+  background-color: #e5e5e5;
+  width: 1600px;
+  margin: auto;
 }
 
 .list {
   list-style: none;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+
+ul,
+ol {
+  margin: 0;
+  padding-left: 0;
+}
+
+img {
+  display: block;
+}
+
+.conteiner {
+  width: 1200px;
+  /* border: 2px solid tomato; */
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: auto;
+}
+
+.section {
+  text-align: center;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-bottom: 94px;
+}
+
+.section-hero {
+  background-color: var(--background-color);
 }
 
 address {
@@ -41,6 +85,12 @@ address {
 
 /* Навигация */
 
+header {
+  padding-top: 24px;
+  padding-bottom: 24px;
+  background-color: var(--hero-color);
+}
+
 .logo {
   font-family: Raleway;
   color: #2196f3;
@@ -48,6 +98,7 @@ address {
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
+  margin-bottom: 20px;
 }
 
 .logo-studio {
@@ -65,6 +116,7 @@ address {
   line-height: 1.14;
   color: #212121;
   letter-spacing: 0.02em;
+  margin-left: 50px;
 }
 
 .nav-adress-ithem {
@@ -75,11 +127,35 @@ address {
   letter-spacing: 0.02em;
 }
 
+.nav-adress-ithem:first-child {
+  margin-right: 50px;
+}
+
 .current {
   color: var(--title-text-color);
 }
 
+.nav-list {
+  display: flex;
+}
+
+.conteiner-nav {
+  display: flex;
+}
+
+.adress-conteiner {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+}
+
+.page-nav {
+  display: flex;
+  align-items: center;
+}
+
 /* Шапка */
+
 .hero-all {
   font-family: Roboto;
   font-style: normal;
@@ -89,6 +165,14 @@ address {
   color: #ffffff;
   text-transform: uppercase;
   letter-spacing: 0.06em;
+  margin-top: 0;
+  margin-bottom: 30px;
+}
+
+.backgraund-hero {
+  background-color: #2f303a;
+  padding-bottom: 200px;
+  padding-top: 200px;
 }
 
 .button:hover,
@@ -99,13 +183,15 @@ address {
 }
 
 .button {
+  box-sizing: border-box;
+  display: inline-block;
   font-family: inherit;
   background: var(--button-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   cursor: pointer;
-  width: 200px;
-  height: 50px;
+  min-width: 200px;
+  min-height: 50px;
   color: #ffffff;
   font-weight: bold;
   font-size: 16px;
@@ -118,7 +204,7 @@ address {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   cursor: pointer;
-  color: #ffffff;
+  color: #f5f4fa;
   padding: 6px 22px;
   border: none;
 }
@@ -136,14 +222,41 @@ address {
 
 /* Особенности */
 
+.about {
+  margin-top: 94px;
+}
+
+.list-features {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.features-items {
+  max-width: 270px;
+  margin-left: 30px;
+  justify-content: space-between;
+  align-content: flex-start;
+  text-align: left;
+}
+
+.features-items:first-child {
+  margin-left: 0;
+}
+
 .heading {
   font-size: 36px;
+  margin-top: 0%;
+  margin-bottom: 0%;
+  padding-bottom: 50px;
   line-height: 1.16;
   color: var(--prymary-text-color);
   letter-spacing: var(--letter-spacing);
 }
 
 .text-list {
+  margin-top: 0;
+  margin-bottom: 0;
   color: #757575;
   font-size: 14px;
   line-height: 1.71;
@@ -152,6 +265,8 @@ address {
 
 .head-list {
   color: #212121;
+  margin-bottom: 10px;
+  margin-top: 30px;
   font-weight: bold;
   line-height: 14px;
   line-height: 1.14;
@@ -160,7 +275,63 @@ address {
 }
 /* Чем мы занимаемся */
 
+/* .conteiner-list {
+  display: flex;
+  flex-wrap: wrap;
+} */
+.works-ithem {
+  display: flex;
+  justify-content: center;
+}
+
+.photo-works {
+  margin-left: 30px;
+}
+
+/* .photo-works:hover {
+  border: solid var(--button-color);
+} */
+
+.photo-works:first-child {
+  margin-left: 0;
+}
+
 /* Наша команда */
+
+.teams {
+  margin-top: 94px;
+  background-color: #f5f4fa;
+}
+
+.conteiner-team {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.list-team {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 94px;
+  justify-content: center;
+}
+
+.team-name {
+  margin-right: 15px;
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+
+.team-name:first-child {
+  margin-left: 15px;
+}
+
+.team-name:first-child {
+  margin-left: 0%;
+}
 
 .name {
   font-weight: 500;
@@ -168,6 +339,12 @@ address {
   line-height: 1.18;
   text-transform: none;
   letter-spacing: var(--letter-spacing);
+  margin-top: 30px;
+}
+
+.text-list {
+  margin-top: 10px;
+  margin-bottom: 30px;
 }
 
 /* Подвал */
@@ -176,6 +353,19 @@ address {
   color: #ffffff;
   font-size: 14px;
   line-height: 1.71;
+}
+
+.logo-ihtems {
+  margin-bottom: 20px;
+}
+
+.logo-footer {
+  font-family: Raleway;
+  color: #2196f3;
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
 }
 
 .logo-studio-footer {
@@ -191,21 +381,34 @@ address {
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
+  margin-top: 20px;
 }
 
-/* За дивы сильно не ругайте
-то временно чтобы фон залить и текст
-был как в макете) */
-.footer-backgraund {
-  background-color: #2f303a;
+.section-fotter {
+  background-color: var(--background-color);
+  padding-top: 60px;
+}
+.list-adress {
+  margin-top: 9px;
 }
 
-.backgraund-hero {
-  background-color: #2f303a;
+.adress {
+  margin-top: 20px;
 }
 
-/* Портфолио
-Футер и Хедер одинаковые */
+/* Портфолио  */
+
+/* ФИЛЬТР КНОПОК */
+
+.list-buttons {
+  display: flex;
+  justify-content: center;
+  margin-top: 100px;
+}
+
+.buttons-num {
+  margin-right: 8px;
+}
 
 /* Проекты */
 
@@ -214,10 +417,37 @@ address {
   font-size: 18px;
   line-height: 2;
   color: #212121;
+  letter-spacing: 0.06em;
+  margin-top: 20px;
+  margin-bottom: 4px;
 }
 
 .text-progects {
   font-size: 16px;
   line-height: 1.87;
   color: #757575;
+  letter-spacing: var(--letter-spacing);
+}
+
+.list-progects {
+  background: #ffffff;
+  border: 1px solid #eeeeee;
+  box-sizing: border-box;
+  margin-left: 30px;
+  margin-bottom: 30px;
+}
+
+.list-progects:nth-child(3n + 1) {
+  margin-left: 0;
+}
+
+.conteiner-progects {
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+}
+
+.type-progects {
+  display: flex;
+  flex-wrap: wrap;
 }
